@@ -1938,6 +1938,14 @@ int mom_set_use(
   at = &pjob->ji_wattr[(int)JOB_ATR_resc_used];
   assert(at->at_type == ATR_TYPE_RESC);
 
+#ifdef USESAVEDRESOURCES
+  /* don't update jobs that are marked as recovery */
+  if (pjob->ji_flags & MOM_JOB_RECOVERY)
+    {
+    return(PBSE_NONE);
+    }
+#endif    /* USESAVEDRESOURCES */
+
   at->at_flags |= ATR_VFLAG_MODIFY;
 
   if ((at->at_flags & ATR_VFLAG_SET) == 0)
@@ -3654,9 +3662,7 @@ void scan_non_child_tasks(void)
 
   job *job;
   extern tlist_head svr_alljobs;
-#ifdef USESAVEDRESOURCES
   static int first_time = TRUE;
-#endif    /* USESAVEDRESOURCES */
 
   DIR *pdir;  /* use local pdir to prevent race conditions associated w/global pdir (VPAC) */
 
@@ -3672,17 +3678,20 @@ void scan_non_child_tasks(void)
       struct dirent *dent;
       int found;
 
-      /* only check on tasks that we think should still be around */
-
-      if (task->ti_qs.ti_status != TI_STATE_RUNNING)
-#ifdef USESAVEDRESOURCES
+      /*
+       * Check for tasks that were exiting when mom went down, set back to
+       * running so we can reprocess them and send the obit
+       */
+      if ((first_time) && (task->ti_qs.ti_sid != 0) &&
+         ((task->ti_qs.ti_status == TI_STATE_EXITED) ||
+         (task->ti_qs.ti_status == TI_STATE_DEAD)))
         {
-        if ((first_time) && (LOGLEVEL >= 7) && (task->ti_qs.ti_sid != 0))
+
+        if (LOGLEVEL >= 7)
           {
-          sprintf(log_buffer, "found non-running (%d) task %d for session %d",
-            task->ti_qs.ti_status,
-            task->ti_qs.ti_task,
-            task->ti_qs.ti_sid);
+          sprintf(log_buffer, "marking task %d as TI_STATE_RUNNING was %d",
+              task->ti_qs.ti_task,
+              task->ti_qs.ti_status);
 
           LOG_EVENT(
             PBSEVENT_DEBUG,
@@ -3690,11 +3699,13 @@ void scan_non_child_tasks(void)
             job->ji_qs.ji_jobid,
             log_buffer);
           }
-        continue;
+        task->ti_qs.ti_status = TI_STATE_RUNNING;
         }
-#else
+
+      /* only check on tasks that we think should still be around */
+
+      if (task->ti_qs.ti_status != TI_STATE_RUNNING)
         continue;
-#endif
 
       /* look for processes with this session id */
 
@@ -3705,20 +3716,6 @@ void scan_non_child_tasks(void)
       if (kill(task->ti_qs.ti_sid, 0) != -1)
         {
         found = 1;
-#ifdef USESAVEDRESOURCES
-        if ((first_time) && (LOGLEVEL >= 7))
-          {
-          sprintf(log_buffer, "found session master %d for task %d",
-            task->ti_qs.ti_sid,
-            task->ti_qs.ti_task);
-
-          LOG_EVENT(
-            PBSEVENT_DEBUG,
-            PBS_EVENTCLASS_JOB,
-            job->ji_qs.ji_jobid,
-            log_buffer);
-          }
-#endif
         }
       else
         {
@@ -3741,20 +3738,6 @@ void scan_non_child_tasks(void)
           if (ps->session == task->ti_qs.ti_sid)
             {
             found = 1;
-#ifdef USESAVEDRESOURCES
-            if ((first_time) && (LOGLEVEL >= 7))
-              {
-              sprintf(log_buffer, "found other pid for session %d for task %d",
-                task->ti_qs.ti_sid,
-                task->ti_qs.ti_task);
-
-              LOG_EVENT(
-                PBSEVENT_DEBUG,
-                PBS_EVENTCLASS_JOB,
-                job->ji_qs.ji_jobid,
-                log_buffer);
-              }
-#endif
 
             break;
             }
@@ -3808,9 +3791,7 @@ void scan_non_child_tasks(void)
 
   closedir(pdir);
   
-#ifdef USESAVEDRESOURCES
   first_time = FALSE;
-#endif    /* USESAVEDRESOURCES */
 
   return;
   }  /* END scan_non_child_tasks() */
