@@ -2,6 +2,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 2.4.6
   f - added an asynchronous option for qsig, specified with -a.
+  b - fix to cleanup job that is left in running state after a mom restart
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
